completed elevator design with full running scenarion